--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Test with Gradle
         run: ./gradlew test
+      - name:  Test with SonarQube
+        run: ./gradlew sonarqube
       - name: Build with Gradle
         run: ./gradlew build -x test
