--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -31,7 +32,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Test with Gradle
         run: ./gradlew test
-      - name:  Test with SonarQube
+      - name: Test with SonarQube
         run: ./gradlew sonarqube
       - name: Build with Gradle
         run: ./gradlew build -x test
