Implement JWT based security.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.data.mongodb.uri=mongodb+srv://${DB_NAME}:${DB_PASSWORD}@cluster0.iqdut.m
 ## JWT Properties
 yelpcamp.app.jwtSecret=${JWT_SECRET}
 yelpcamp.app.jwtExpirationMs=${JWT_EXPIRATION_MS}
+server.servlet.context-path=/api/v1/
